# SspCpp

./: .gitignore  CHANGELOG.md  CITATION.cff  CMakeLists.txt  LICENSE  README.md  SoundSpeed.sln  SoundSpeed.vcxproj
.github/workflows/: cmake.yml  code-quality.yml  linter.yml  linux.yml  windows.yml
docs/: CMakeLists.txt  Doxyfile.in
docs/source/: conf.py  index.rst  models.rst
examples/: CMakeLists.txt  Main.cpp  Simple.txt
include/: Cast.h  ProcessChecks.h
include/SspCpp/: Cast.h  LatLong.h  ProcessChecks.h  SoundSpeed.h  sspcpp_export.h
src/: CMakeLists.txt  Cast.h  Checks.cpp  Checks.h  LatLong.cpp  LatLong.h  Main.cpp  Physical.cpp  ProcessChecks.cpp  ProcessChecks.h  SoundSpeed.cpp  SoundSpeed.h  StringUtilities.h  TimeStruct.h  pch.h
src/Readers/: Aoml.cpp  Aoml.h  Asvp.cpp  Asvp.h  Hypack.cpp  Hypack.h  Oceanscience.cpp  Oceanscience.h  SeaAndSun.cpp  SeaAndSun.h  SeaBird.cpp  SeaBird.h  Simple.cpp  Simple.h  Sonardyne.cpp  Sonardyne.h  TimeStruct.h  Unb.cpp  Unb.h
tests/: CMakeLists.txt  test.cpp
tests/Tests/: Tests.vcxproj  pch.h  test.cpp
